--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="content" role="main">
-dec <input type="text" value="{{number}}"><br>
+dec <input [(ngModel)]="number" (change)="test()"><br>
 bin <input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox"><input type="checkbox">
 </div>
 
