--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,16 @@
 <div>
   <button (click)="actMenu = menu.USERS">Users</button> <button (click)="actMenu = menu.BOOKS">Books</button> <button (click)="actMenu = menu.BORROWINGS">Borrowings</button>
 
+  <div *ngIf="actMenu == menu.USERS">
+    <br>
+    ID: <input type="text" [(ngModel)]="users.id"><br>
+    BOOK: <input type="text" [(ngModel)]="users.name"><br>
+    CONTACT: <input type="text" [(ngModel)]="users.contact"><br>
+    <button (click)="addUser()">Add user</button><br><br>
+    users:
+    <div *ngFor="let u of users">{{u.id}}, {{u.name}}, {{u.contact}}</div>
+  </div>
+
   <div *ngIf="actMenu == menu.BOOKS">
     <br>
     ID: <input type="text" [(ngModel)]="book.id"><br>
@@ -10,10 +20,6 @@
     <button (click)="addBook()">Add book</button><br><br>
     books:
     <div *ngFor="let b of books">{{b.id}}, {{b.name}}, {{b.author}}, {{b.available}}</div>
-  </div>
-
-  <div *ngIf="actMenu == menu.USERS">
-    <h2>TODO</h2>
   </div>
 
   <div *ngIf="actMenu == menu.BORROWINGS">
