--- a/src/app/kniha-formular/kniha-formular.component.html
+++ b/src/app/kniha-formular/kniha-formular.component.html
@@ -1,4 +1,10 @@
-nazov:
-<input [(ngModel)]="kniha.nazov"><br>
-autor:
-<input [(ngModel)]="kniha.autor"><br>
+
+<form [formGroup] = "formular">
+  nazov:
+  <input formControlName="nazov"><br>
+  autor:
+  <input formControlName="autor"><br>
+
+  <button *ngIf="formular.value.id === null" (click)="pridaj()">Pridaj</button>
+  <button *ngIf="formular.value.id !== null" (click) = "uprav()">Uprav</button>
+</form>
