--- a/src/app/osoba-stranka/osoba-stranka.component.html
+++ b/src/app/osoba-stranka/osoba-stranka.component.html
@@ -1,2 +1,2 @@
-<app-osoba-formular></app-osoba-formular>
-<app-osoba-zoznam></app-osoba-zoznam>
+<app-osoba-formular [osoba]="osobaNaUpravu" (pridajOsobu) = "pridaj($event)" (upravOsobu)="uprav($event)"></app-osoba-formular>
+<app-osoba-zoznam [osoby]="osoby" (upravOsobu)="upravZoZozmanu($event)" (zmazOsobu)="zmaz($event)"></app-osoba-zoznam>
